--- a/package.json
+++ b/package.json
@@ -15,11 +15,12 @@
     "i18n-iso-countries": "^7.11.3",
     "langchain": "^0.2.10",
     "next": "14.2.5",
-    "openai": "^4.52.7",
+    "openai": "^4.53.2",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.52.1",
     "sass": "^1.77.8",
+    "usehooks-ts": "^3.1.0",
     "uuid": "^10.0.0",
     "zod": "^3.23.8"
   },
